--- a/app/src/main/res/layout/activity_pengirim_transfer.xml
+++ b/app/src/main/res/layout/activity_pengirim_transfer.xml
@@ -33,6 +33,45 @@
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"/>
 
+  <LinearLayout
+    android:id="@+id/dummyDataStore"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginHorizontal="24dp"
+    android:orientation="vertical"
+    android:layout_marginVertical="10dp"
+    app:layout_constraintTop_toBottomOf="@+id/tvTitlePembayaran"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintEnd_toEndOf="parent">
+
+    <TextView
+        android:id="@+id/tvGetJenisBank"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="dummy"/>
+    <TextView
+        android:id="@+id/tvGetNamaPenerima"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="dummy"/>
+    <TextView
+        android:id="@+id/tvGetNoRekening"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="dummy"/>
+    <TextView
+        android:id="@+id/tvGetTipeTransaksi"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="dummy"/>
+    <TextView
+        android:id="@+id/tvGetTotal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="dummy"/>
+
+  </LinearLayout>
+
   <TextView
       android:id="@+id/result_id"
       android:layout_height="39dp"
