--- a/app/src/main/res/layout/activity_lokal_transfer.xml
+++ b/app/src/main/res/layout/activity_lokal_transfer.xml
@@ -223,9 +223,9 @@
 
         <TextView
             android:id="@+id/tvTotal"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="1.0000.000 IDR"
+            android:text=""
             android:fontFamily="@font/dm_sans_bold"
             android:textSize="18sp"
             android:layout_marginStart="24dp"
@@ -234,7 +234,20 @@
             android:layout_marginVertical="10dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tvDescTotal"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            />
+
+        <TextView
+            android:id="@+id/tvIdr"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=".IDR"
+            android:fontFamily="@font/dm_sans_bold"
+            android:textSize="18sp"
+            android:layout_marginEnd="24dp"
+            android:textColor="@color/green"
+            android:layout_marginVertical="10dp"
+            app:layout_constraintStart_toEndOf="@+id/tvTotal"
+            app:layout_constraintTop_toBottomOf="@id/tvDescTotal"/>
 
         <Button
             android:id="@+id/btnSelanjutnya"
