--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -191,6 +191,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearlayoutKatasandi"
         android:layout_marginHorizontal="24dp"
+        android:layout_marginVertical="10dp"
         android:textColor="@color/warning_font"
         android:fontFamily="@font/dm_sans"
         android:visibility="invisible"/>
@@ -203,7 +204,7 @@
         android:fontFamily="@font/dm_sans_medium"
         android:textSize="16sp"
         android:textColor="@color/warna_button"
-        android:layout_marginVertical="5dp"
+        android:layout_marginVertical="10dp"
         android:layout_marginEnd="20dp"
         app:layout_constraintTop_toBottomOf="@+id/tvWarningKataSandi"
         app:layout_constraintEnd_toEndOf="parent"/>
@@ -215,45 +216,30 @@
             style="@style/firstbutton"
             android:fontFamily="@font/dm_sans_medium"
             android:paddingVertical="10dp"
+            android:layout_marginVertical="41dp"
             android:layout_marginHorizontal="24dp"
             android:text="Masuk"
-            app:layout_constraintBottom_toTopOf="@+id/btnLoginGoogle"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"/>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"/>
 
-    <Button
-        android:id="@+id/btnLoginInvisible"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        style="@style/invisiblebutton"
-        android:fontFamily="@font/dm_sans_medium"
-        android:paddingVertical="10dp"
-        android:layout_marginHorizontal="24dp"
-        android:text="Masuk"
-        android:visibility="invisible"
-        app:layout_constraintBottom_toTopOf="@+id/btnLoginGoogle"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:enabled="false"/>
-
-
-    <Button
-        android:id="@+id/btnLoginGoogle"
-        style="?attr/materialButtonOutlinedStyle"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/dm_sans_medium"
-        android:paddingVertical="10dp"
-        android:layout_marginBottom="40dp"
-        android:layout_marginHorizontal="24dp"
-        android:text="Masuk Dengan Google"
-        android:textAllCaps="false"
-        android:textColor="@color/warna_button"
-        app:strokeColor="@color/warna_button"
-        android:textSize="16sp"
-        app:circularflow_radiusInDP="10dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"/>
+<!--    <Button-->
+<!--        android:id="@+id/btnLoginGoogle"-->
+<!--        style="?attr/materialButtonOutlinedStyle"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:fontFamily="@font/dm_sans_medium"-->
+<!--        android:paddingVertical="10dp"-->
+<!--        android:layout_marginBottom="40dp"-->
+<!--        android:layout_marginHorizontal="24dp"-->
+<!--        android:text="Masuk Dengan Google"-->
+<!--        android:textAllCaps="false"-->
+<!--        android:textColor="@color/warna_button"-->
+<!--        app:strokeColor="@color/warna_button"-->
+<!--        android:textSize="16sp"-->
+<!--        app:circularflow_radiusInDP="10dp"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent"/>-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
