--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -96,12 +96,13 @@
 
     <TextView
         android:id="@+id/tvKodeNegara"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:layout_marginTop="5dp"
         android:gravity="center"
         android:text="+62"
         android:textSize="16sp"
+        android:textStyle="bold"
         android:textColor="@color/warna_primary_font"
         android:background="@drawable/transparent_bg_button"
         app:layout_constraintEnd_toStartOf="@+id/etNoHp"
@@ -111,11 +112,10 @@
         android:id="@+id/etNoHp"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:hint="Masukkan Nomor Handphone"
         android:inputType="number"
         android:paddingStart="10dp"
         android:layout_marginEnd="24dp"
-        android:textSize="12sp"
+        android:textSize="16sp"
         android:maxLength="20"
         android:textColorHint="@color/warna_auth_font"
         android:textColor="@color/warna_auth_font"
@@ -133,7 +133,9 @@
         android:layout_height="wrap_content"
         android:text="No. hp minimal 10 angka"
         android:textColor="@color/warning_font"
+        android:textSize="14px"
         android:layout_marginStart="100dp"
+        android:layout_marginVertical="12dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/etNoHp"
         android:visibility="invisible"/>
