--- a/app/src/main/res/layout/activity_verifikasi.xml
+++ b/app/src/main/res/layout/activity_verifikasi.xml
@@ -100,8 +100,8 @@
         android:textColor="@color/warna_auth_font"
         android:textSize="12dp"
         android:fontFamily="@font/dm_sans"
-        android:layout_marginVertical="10dp"
-        android:layout_marginStart="30dp"
+        android:layout_marginVertical="20dp"
+        android:layout_marginStart="59dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/result_id"/>
 
@@ -113,7 +113,7 @@
         android:textColor="@color/warna_button_invisible"
         android:textSize="12dp"
         android:fontFamily="@font/dm_sans"
-        android:layout_marginVertical="10dp"
+        android:layout_marginVertical="20dp"
         android:layout_marginHorizontal="5dp"
         app:layout_constraintStart_toEndOf="@+id/tvBelumDapat"
         app:layout_constraintTop_toBottomOf="@+id/result_id"
@@ -326,18 +326,18 @@
     </LinearLayout>
 
 
-    <ProgressBar
-        android:id="@+id/progressBarPengirim"
-        style="?android:attr/progressBarStyle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:indeterminate="true"
-        android:visibility="visible"
-        android:background="@drawable/progress"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:visibility="visible" />
+<!--    <ProgressBar-->
+<!--        android:id="@+id/progressBarPengirim"-->
+<!--        style="?android:attr/progressBarStyle"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:indeterminate="true"-->
+<!--        android:visibility="visible"-->
+<!--        android:background="@drawable/progress"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toTopOf="parent"-->
+<!--        tools:visibility="visible" />-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
