--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -16,17 +16,31 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
+
         <TextView
-            android:id="@+id/tvUsername"
+            android:id="@+id/tvGreating"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Hai, Dinda Salsabila"
+            android:text="Hai,"
             android:textSize="24sp"
             android:textColor="@color/white"
             android:fontFamily="@font/dm_sans_bold"
             android:layout_marginVertical="28dp"
             android:layout_marginStart="25dp"
             app:layout_constraintStart_toStartOf="@+id/constrainUserHome"
+            app:layout_constraintTop_toTopOf="@+id/constrainUserHome"/>
+
+        <TextView
+            android:id="@+id/tvUsername"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Dinda Salsabila"
+            android:textSize="24sp"
+            android:textColor="@color/white"
+            android:fontFamily="@font/dm_sans_bold"
+            android:layout_marginVertical="28dp"
+            android:layout_marginStart="5dp"
+            app:layout_constraintStart_toEndOf="@+id/tvGreating"
             app:layout_constraintTop_toTopOf="@+id/constrainUserHome"/>
 
         <TextView
