--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -110,8 +110,7 @@
         android:textColor="@color/warna_auth_font"
         android:background="@drawable/transparent_bg_button"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvEmail"
-        />
+        app:layout_constraintTop_toBottomOf="@+id/tvEmail" />
 
     <TextView
         android:id="@+id/tvWarningEmail"
@@ -216,44 +215,46 @@
             android:fontFamily="@font/dm_sans_medium"
             android:paddingVertical="10dp"
             android:layout_marginHorizontal="24dp"
+            android:layout_marginVertical="41dp"
             android:text="Masuk"
-            app:layout_constraintBottom_toTopOf="@+id/btnLoginGoogle"
+            app:layout_constraintTop_toBottomOf="@+id/tvLupaPassword"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"/>
 
-    <Button
-        android:id="@+id/btnLoginInvisible"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        style="@style/invisiblebutton"
-        android:fontFamily="@font/dm_sans_medium"
-        android:paddingVertical="10dp"
-        android:layout_marginHorizontal="24dp"
-        android:text="Masuk"
-        android:visibility="invisible"
-        app:layout_constraintBottom_toTopOf="@+id/btnLoginGoogle"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:enabled="false"/>
+<!--    <Button-->
+<!--        android:id="@+id/btnLoginInvisible"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        style="@style/invisiblebutton"-->
+<!--        android:fontFamily="@font/dm_sans_medium"-->
+<!--        android:paddingVertical="10dp"-->
+<!--        android:layout_marginHorizontal="24dp"-->
+<!--        android:text="Masuk"-->
+<!--        android:visibility="invisible"-->
+<!--        app:layout_constraintBottom_toTopOf="@+id/btnLoginGoogle"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        android:enabled="false"/>-->
 
 
-    <Button
-        android:id="@+id/btnLoginGoogle"
-        style="?attr/materialButtonOutlinedStyle"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/dm_sans_medium"
-        android:paddingVertical="10dp"
-        android:layout_marginBottom="40dp"
-        android:layout_marginHorizontal="24dp"
-        android:text="Masuk Dengan Google"
-        android:textAllCaps="false"
-        android:textColor="@color/warna_button"
-        app:strokeColor="@color/warna_button"
-        android:textSize="16sp"
-        app:circularflow_radiusInDP="10dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"/>
+<!--    <Button-->
+<!--        android:id="@+id/btnLoginGoogle"-->
+<!--        style="?attr/materialButtonOutlinedStyle"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:fontFamily="@font/dm_sans_medium"-->
+<!--        android:paddingVertical="10dp"-->
+<!--        android:layout_marginBottom="40dp"-->
+<!--        android:layout_marginHorizontal="24dp"-->
+<!--        android:text="Masuk Dengan Google"-->
+<!--        android:textAllCaps="false"-->
+<!--        android:textColor="@color/warna_button"-->
+<!--        app:strokeColor="@color/warna_button"-->
+<!--        android:textSize="16sp"-->
+<!--        app:circularflow_radiusInDP="10dp"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent"/>-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
