--- a/app/src/main/res/layout/activity_pengirim_transfer.xml
+++ b/app/src/main/res/layout/activity_pengirim_transfer.xml
@@ -34,15 +34,16 @@
       app:layout_constraintEnd_toEndOf="parent"/>
 
   <LinearLayout
-    android:id="@+id/dummyDataStore"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginHorizontal="24dp"
-    android:orientation="vertical"
-    android:layout_marginVertical="10dp"
-    app:layout_constraintTop_toBottomOf="@+id/tvTitlePembayaran"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintEnd_toEndOf="parent">
+      android:id="@+id/dummyDataStore"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:layout_marginHorizontal="24dp"
+      android:orientation="vertical"
+      android:visibility="gone"
+      android:layout_marginVertical="10dp"
+      app:layout_constraintTop_toBottomOf="@+id/tvTitlePembayaran"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintEnd_toEndOf="parent">
 
     <TextView
         android:id="@+id/tvGetJenisBank"
@@ -66,6 +67,12 @@
         android:text="dummy"/>
     <TextView
         android:id="@+id/tvGetTotal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="dummy"/>
+
+    <TextView
+        android:id="@+id/tvGetSwift"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="dummy"/>
@@ -184,16 +191,16 @@
 
       <Button
           android:id="@+id/five_btn"
+          style="@style/roundedbutton"
           android:layout_width="wrap_content"
           android:layout_height="90dp"
-          style="@style/roundedbutton"
           android:background="@drawable/round_btn_bg"
+          android:text="5"
           android:textColor="@color/warna_button"
-          app:layout_constraintTop_toTopOf="@+id/constrainSecond"
-          app:layout_constraintStart_toStartOf="@+id/constrainSecond"
-          app:layout_constraintEnd_toEndOf="@+id/constrainSecond"
           app:layout_constraintBottom_toBottomOf="@+id/constrainSecond"
-          android:text="5" />
+          app:layout_constraintEnd_toEndOf="@+id/constrainSecond"
+          app:layout_constraintStart_toStartOf="@+id/constrainSecond"
+          app:layout_constraintTop_toTopOf="parent" />
 
       <Button
           android:id="@+id/four_btn"
@@ -315,11 +322,10 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:indeterminate="true"
-      android:visibility="visible"
+      android:visibility="invisible"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toTopOf="parent"
-      tools:visibility="visible" />
+      app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
