--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,198 +1,223 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/warna_background"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".features.home.fragment.HomeFragment">
+    android:layout_height="match_parent">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/constrainUserHome"
         android:layout_width="match_parent"
-        android:layout_height="383dp"
-        android:background="@drawable/bg_half_rounded_home"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
-
-
-        <TextView
-            android:id="@+id/tvGreating"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Hai,"
-            android:textSize="24sp"
-            android:textColor="@color/white"
-            android:fontFamily="@font/dm_sans_bold"
-            android:layout_marginVertical="28dp"
-            android:layout_marginStart="25dp"
-            app:layout_constraintStart_toStartOf="@+id/constrainUserHome"
-            app:layout_constraintTop_toTopOf="@+id/constrainUserHome"/>
-
-        <TextView
-            android:id="@+id/tvUsername"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Dinda Salsabila"
-            android:textSize="24sp"
-            android:textColor="@color/white"
-            android:fontFamily="@font/dm_sans_bold"
-            android:layout_marginVertical="28dp"
-            android:layout_marginStart="5dp"
-            app:layout_constraintStart_toEndOf="@+id/tvGreating"
-            app:layout_constraintTop_toTopOf="@+id/constrainUserHome"/>
-
-        <TextView
-            android:id="@+id/tvGreeting"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Selamat Datang di TransEvilz"
-            android:textSize="10sp"
-            android:textColor="@color/white"
-            android:fontFamily="@font/dm_sans_medium"
-            android:layout_marginStart="25dp"
-            app:layout_constraintStart_toStartOf="@+id/constrainUserHome"
-            app:layout_constraintTop_toBottomOf="@+id/tvUsername"/>
-
-
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/ivSetImage"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_marginVertical="33dp"
-            android:layout_marginEnd="24dp"
-            android:src="@drawable/ic_launcher_background"
-            app:layout_constraintEnd_toEndOf="@+id/constrainUserHome"
-            app:layout_constraintTop_toTopOf="@+id/constrainUserHome" />
-
-        <TextView
-            android:id="@+id/tvLastTransaksi"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Transaksi Terakhir"
-            android:textSize="16sp"
-            android:textColor="@color/white"
-            android:fontFamily="@font/dm_sans_medium"
-            android:layout_marginVertical="60dp"
-            android:layout_marginStart="25dp"
-            app:layout_constraintStart_toStartOf="@+id/constrainUserHome"
-            app:layout_constraintTop_toBottomOf="@+id/tvGreeting"/>
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rvTransaksiTerakhir"
-            android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:layout_marginTop="10dp"
-            app:layout_constraintTop_toBottomOf="@+id/tvLastTransaksi"
-            app:layout_constraintStart_toStartOf="@+id/constrainUserHome"
-            app:layout_constraintEnd_toEndOf="@+id/constrainUserHome"/>
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_begin="320dp" />
-
-    <LinearLayout
-        android:id="@+id/lyMetodeTf"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center_horizontal"
-        app:layout_constraintTop_toBottomOf="@+id/guideline1">
-
-        <androidx.cardview.widget.CardView
-        android:layout_width="168dp"
-        android:layout_height="60dp"
-        app:cardCornerRadius="10dp"
-        android:layout_marginVertical="15dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginEnd="24dp"
-        android:outlineSpotShadowColor="@color/black"
-        app:layout_constraintStart_toStartOf="@+id/constrainUserHome"
-        app:layout_constraintEnd_toEndOf="@id/constrainUserHome">
+        android:layout_height="match_parent"
+        android:background="@color/warna_background"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        tools:context=".features.home.fragment.HomeFragment">
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/contraintTfLokal"
+            android:id="@+id/constrainUserHome"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:background="@color/warna_background_metode"
-            android:orientation="horizontal">
+            android:layout_height="320dp"
+            android:background="@drawable/bg_half_rounded_home"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent">
+
 
             <TextView
-                android:layout_width="match_parent"
+                android:id="@+id/tvGreating"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:text="Hai,"
+                android:textSize="24sp"
                 android:textColor="@color/white"
-                android:text="Transfer Lokal"
-                android:textAlignment="center"
                 android:fontFamily="@font/dm_sans_bold"
-                android:textSize="13sp"
-                app:layout_constraintTop_toTopOf="@+id/contraintTfLokal"
-                app:layout_constraintEnd_toEndOf="@+id/contraintTfLokal"
-                app:layout_constraintStart_toStartOf="@+id/contraintTfLokal"
-                app:layout_constraintBottom_toBottomOf="@+id/contraintTfLokal"
-                android:src="@drawable/icbankaccount"/>
+                android:layout_marginVertical="28dp"
+                android:layout_marginStart="25dp"
+                app:layout_constraintStart_toStartOf="@+id/constrainUserHome"
+                app:layout_constraintTop_toTopOf="@+id/constrainUserHome"/>
 
+            <TextView
+                android:id="@+id/tvUsername"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Dinda Salsabila"
+                android:textSize="24sp"
+                android:textColor="@color/white"
+                android:fontFamily="@font/dm_sans_bold"
+                android:layout_marginVertical="28dp"
+                android:layout_marginStart="5dp"
+                app:layout_constraintStart_toEndOf="@+id/tvGreating"
+                app:layout_constraintTop_toTopOf="@+id/constrainUserHome"/>
+
+            <TextView
+                android:id="@+id/tvGreeting"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Selamat Datang di TransEvilz"
+                android:textSize="10sp"
+                android:textColor="@color/white"
+                android:fontFamily="@font/dm_sans_medium"
+                android:layout_marginStart="25dp"
+                app:layout_constraintStart_toStartOf="@+id/constrainUserHome"
+                app:layout_constraintTop_toBottomOf="@+id/tvUsername"/>
+
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/ivSetImage"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginVertical="33dp"
+                android:layout_marginEnd="24dp"
+                android:src="@drawable/ic_launcher_background"
+                app:layout_constraintEnd_toEndOf="@+id/constrainUserHome"
+                app:layout_constraintTop_toTopOf="@+id/constrainUserHome" />
+
+            <TextView
+                android:id="@+id/tvLastTransaksi"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Transaksi Terakhir"
+                android:textSize="16sp"
+                android:textColor="@color/white"
+                android:fontFamily="@font/dm_sans_medium"
+                android:layout_marginVertical="60dp"
+                android:layout_marginStart="25dp"
+                app:layout_constraintStart_toStartOf="@+id/constrainUserHome"
+                app:layout_constraintTop_toBottomOf="@+id/tvGreeting"/>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rvTransaksiTerakhir"
+                android:layout_width="match_parent"
+                android:layout_height="100dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginStart="25dp"
+                app:layout_constraintTop_toBottomOf="@+id/tvLastTransaksi"
+                app:layout_constraintStart_toStartOf="@+id/constrainUserHome"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-    </androidx.cardview.widget.CardView>
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_begin="250dp" />
 
-        <androidx.cardview.widget.CardView
-            android:layout_width="168dp"
-            android:layout_height="60dp"
-            app:cardCornerRadius="10dp"
-            android:layout_marginVertical="15dp"
-            android:layout_marginStart="24dp"
-            android:layout_marginEnd="24dp"
-            app:layout_constraintStart_toStartOf="@+id/constrainUserHome"
-            app:layout_constraintEnd_toEndOf="@id/constrainUserHome">
+        <LinearLayout
+            android:id="@+id/lyMetodeTf"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center_horizontal"
+            app:layout_constraintTop_toBottomOf="@+id/guideline1">
 
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/contraintTfInter"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="center"
-                android:background="@color/warna_background_metode"
-                android:orientation="horizontal">
+            <androidx.cardview.widget.CardView
+                android:layout_width="168dp"
+                android:layout_height="60dp"
+                app:cardCornerRadius="10dp"
+                android:layout_marginVertical="15dp"
+                android:layout_marginStart="24dp"
+                android:layout_marginEnd="24dp"
+                android:outlineSpotShadowColor="@color/black"
+                app:layout_constraintStart_toStartOf="@+id/constrainUserHome"
+                app:layout_constraintEnd_toEndOf="@id/constrainUserHome">
 
-                <TextView
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/contraintTfLokal"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/white"
-                    android:text="Transfer Internasional"
-                    android:textAlignment="center"
-                    android:fontFamily="@font/dm_sans_bold"
-                    android:textSize="13sp"
-                    app:layout_constraintTop_toTopOf="@+id/contraintTfInter"
-                    app:layout_constraintEnd_toEndOf="@+id/contraintTfInter"
-                    app:layout_constraintStart_toStartOf="@+id/contraintTfInter"
-                    app:layout_constraintBottom_toBottomOf="@+id/contraintTfInter"/>
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:background="@color/warna_background_metode"
+                    android:orientation="horizontal">
 
-            </androidx.constraintlayout.widget.ConstraintLayout>
-
-        </androidx.cardview.widget.CardView>
-
-    </LinearLayout>
-
-
-    <TextView
-        android:id="@+id/tvKursMatauang"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Kurs Mata Uang"
-        android:textSize="18sp"
-        android:fontFamily="@font/dm_sans_bold"
-        android:textColor="@color/warna_primary_font"
-        android:layout_marginVertical="13dp"
-        android:layout_marginStart="25dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/lyMetodeTf"/>
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/white"
+                        android:text="Transfer Lokal"
+                        android:textAlignment="center"
+                        android:fontFamily="@font/dm_sans_bold"
+                        android:textSize="13sp"
+                        app:layout_constraintTop_toTopOf="@+id/contraintTfLokal"
+                        app:layout_constraintEnd_toEndOf="@+id/contraintTfLokal"
+                        app:layout_constraintStart_toStartOf="@+id/contraintTfLokal"
+                        app:layout_constraintBottom_toBottomOf="@+id/contraintTfLokal"
+                        android:src="@drawable/icbankaccount"/>
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="168dp"
+                android:layout_height="60dp"
+                app:cardCornerRadius="10dp"
+                android:layout_marginVertical="15dp"
+                android:layout_marginStart="24dp"
+                android:layout_marginEnd="24dp"
+                app:layout_constraintStart_toStartOf="@+id/constrainUserHome"
+                app:layout_constraintEnd_toEndOf="@id/constrainUserHome">
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/contraintTfInter"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:background="@color/warna_background_metode"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/white"
+                        android:text="Transfer Internasional"
+                        android:textAlignment="center"
+                        android:fontFamily="@font/dm_sans_bold"
+                        android:textSize="13sp"
+                        app:layout_constraintTop_toTopOf="@+id/contraintTfInter"
+                        app:layout_constraintEnd_toEndOf="@+id/contraintTfInter"
+                        app:layout_constraintStart_toStartOf="@+id/contraintTfInter"
+                        app:layout_constraintBottom_toBottomOf="@+id/contraintTfInter"/>
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+            </androidx.cardview.widget.CardView>
+
+        </LinearLayout>
+
+
+        <TextView
+            android:id="@+id/tvKursMatauang"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Kurs Mata Uang"
+            android:textSize="18sp"
+            android:fontFamily="@font/dm_sans_bold"
+            android:textColor="@color/warna_primary_font"
+            android:layout_marginVertical="13dp"
+            android:layout_marginStart="25dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/lyMetodeTf"/>
+
+        <ImageView
+            android:id="@+id/ivAnalytic"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/dummy_analytic"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tvKursMatauang"/>
+
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rvCurrency"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginStart="25dp"
+            app:layout_constraintTop_toBottomOf="@+id/ivAnalytic"
+            app:layout_constraintStart_toStartOf="@+id/constrainUserHome"/>
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
